--- a/src/App.scss
+++ b/src/App.scss
@@ -378,8 +378,70 @@ ul {
 #SearchPage{
     padding-top: 80px; /* navbar */
     .wrapper{
-
-        display: flex;
+         display: flex;
+        .right{
+            .bottom{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 10px; 
+        
+                // ---card----
+              .card{
+                    width: 280px;
+                    display: flex;
+                    flex-direction: column;    
+        
+                    border: 1px solid gray;
+                    border-radius: 4px;
+                    
+                    .imageWrap{
+                        width: 100%;
+                        height: 400px;
+                        overflow: hidden;        /* 🦄 overflow: hidden; 스크롤바 없앰 */
+                        position: relative;
+                        
+                        .mainImg{
+                            z-index: 1;
+                        }
+        
+                        &:hover{
+                            .secondImg{
+                                z-index: 2;   /* 🦄 hover...z-index변화 */
+                            }                
+                        }
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            position: absolute;
+                        }         
+                    }
+               
+                    .titleWrapper{
+                        background-color: rgb(236, 236, 236);
+                        // width: 100%;
+                        text-align: center;
+        
+                        h4{
+                            margin: 5px auto;  
+                        }
+                        .title{
+                                          
+                        }
+                      
+                        .prices{
+                            display: flex;
+                            gap: 20px;
+                            justify-content: center;
+            
+                       
+                            // margin: auto;    
+                        }            
+                    }
+                }
+            }
+        }
     }
 }
 
