--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -92,6 +92,8 @@
     #navbar{    
         .nav_wrap{    
             width: 620px;
+            justify-content: center;
+            gap: 1rem;
 
             // 🍀responsive
             .none{
