--- a/src/App.scss
+++ b/src/App.scss
@@ -371,6 +371,12 @@ ul {
         }
     }
 
+    .Sort{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
 }
 
 
