--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,5 +1,4 @@
 #Card{
-    background-color: yellow;
 .bottom{
     display: flex;
     flex-wrap: wrap;
@@ -8,7 +7,8 @@
 
     // ---card----
   .card{
-        width: 280px;
+        width: 240px;
+        height: 300px;
         display: flex;
         flex-direction: column;    
 
@@ -17,7 +17,7 @@
         
         .imageWrap{
             width: 100%;
-            height: 400px;
+            height: 100%;
             overflow: hidden;        /* 🦄 overflow: hidden; 스크롤바 없앰 */
             position: relative;
             
@@ -64,19 +64,13 @@
 }
 
 
-
 //🍀 sidebar
 @media (max-width:700px) {
     #Card{                
-        background-color: blue;
         .bottom{        
             .card{
-                width: 140px;          
-                
-                .imageWrap{
-                    width: 100%;
-                    height: 150px;                   
-                }
+                width: 140px; 
+                height: 200px;     
             
                 .titleWrapper{    
                     display: flex;     
